Modal fund request clarification, fix icon overflow

--- a/src/sources/forus-platform/scss/_common/dashboard.scss
+++ b/src/sources/forus-platform/scss/_common/dashboard.scss
@@ -4759,6 +4759,10 @@ $colorPrimaryLight: $color_primary_light;
             width: 680px;
         }
 
+        .modal-body {
+            overflow: visible;
+        }
+
         .modal-footer {
             padding: 20px 30px;
         }
